--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,8 @@ body {
   display: flex;
 }
 
+/* Sidebar */
+
 .image-sidebar {
   height: 100vh;
   position: relative;
@@ -85,21 +87,66 @@ body {
   color: white;
 }
 
+/* Info */
+
 .info-section {
   flex: initial;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 50%;
+  align-items: end;
+  max-width: 65%;
+  background-color: #FAFAFF;
 }
 
 .info-section p {
-  padding: 0 0rem 0 4rem;
+  padding: 0 0 0 4rem;
   font-size: 1.4rem;
   font-weight: 700;
   margin-bottom: 2rem;
+  align-self: flex-start;
 }
 
 .italicised {
   font-style: italic;
+}
+
+/* Form */
+
+.sign-up-form {
+  padding: 0 0 0 4rem;
+  max-width: 100%;
+  background-color: #FFFFFF;
+  box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.25);
+}
+
+.sign-up-form h2 {
+  margin-bottom: 1rem;
+}
+
+.form-input-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-inputs {
+  flex-basis: 35%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+}
+
+.form-inputs input {
+  border: 1px solid #E5E7EB;
+  padding: 0.2rem 0.4rem;
+}
+
+.form-inputs input:focus {
+  outline-color: rgb(79, 164, 243);
+  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.75);
+}
+
+.form-inputs input[type=password]:invalid {
+  outline-color: red;
 }
