--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ body {
 /* Form */
 
 .sign-up-form {
-  padding: 0 0 0 4rem;
+  padding: 2rem 0 2rem 4rem;
   max-width: 100%;
   background-color: #FFFFFF;
   box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.25);
